Bug 863852 - Part 1 - Log event and state names rather than codes. r=smaug